@@ -1,6 +1,7 @@
 2010-11-23  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* term/js/gnuplot_common.js:  Rotated text should be zoomed also.
+	* term/js/gnuplot_mouse.js:   Avoid negative height or width.
 
 2010-11-20  Casey Carter   <ctcarter@users.sourceforge.net>
 
